<resources>
    <string name="app_name">RHISS</string>
    <string name="loginOptions">Login Options/ Accessibility</string>
    <string name="pli_login">PLI Login</string>
    <string name="get_lgd_code">Get Location Code(Census/LGD)</string>
    <string name="beneficiary_login">Beneficiary Login</string>
    <string name="reset">Reset</string>
    <string name="login">Login</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="openDrawer">Drawer Open</string>
    <string name="closeDrawer">Drawer Close</string>
    <string name="select_state">Select State</string>
    <string name="select_district">Select District</string>
    <string name="select_block">Select Block</string>
    <string name="select_panchayat">Select Panchayat</string>
    <string name="select_village">Select Village</string>
    <string name="search">Search</string>
    <string name="loading_data">Loading Data</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="beneficiaries">Beneficiaries</string>
    <string name="lgd_code">LGD Code</string>
    <string name="mobile">Mobile No</string>
    <string name="mobile_number">Beneficiary Registered Mobile Number</string>
    <string name="pli_code">PLI Code</string>
    <string name="otp_head">OTP sent on your registered mobile number</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="valid_otp">Please enter 4 digit OTP sent to your mobile number</string>
    <string name="beneficiary_detail">Beneficiary Detail</string>
    <string name="beneficiary_name">Beneficiary Name</string>
    <string name="state_code">State Code</string>
    <string name="state_name">State Name</string>
    <string name="district_code">District Code</string>
    <string name="district_name">District Name</string>
    <string name="block_code">Block Code</string>
    <string name="block_name">Block Name</string>
    <string name="gp_code">GP Code</string>
    <string name="gp_name">GP Name</string>
    <string name="village_code">Village Code</string>
    <string name="village_name">Village Name</string>
    <string name="gender">Gender</string>
    <string name="email">Email</string>
    <string name="installment_details">Installment Details</string>
    <string name="inspection_date">Inspection Date</string>
    <string name="inspection_level">Inspection Level</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="accuracy">Accuracy</string>
    <string name="deviation">Deviation</string>
    <string name="add_remark">Add Remark</string>
    <string name="upload">Upload</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>
    <string name="ok">OK</string>


    <dimen name="space3dp">3dp</dimen>
    <dimen name="space1">5dp</dimen>
    <dimen name="space2">8dp</dimen>
    <dimen name="space3">10dp</dimen>
    <dimen name="space4">12dp</dimen>
    <dimen name="space5">15dp</dimen>
    <dimen name="space16dp">16dp</dimen>
    <dimen name="space6">18dp</dimen>
    <dimen name="space7">20dp</dimen>
    <dimen name="space8">22dp</dimen>
    <dimen name="space9">25dp</dimen>
    <dimen name="space10">28dp</dimen>
    <dimen name="space11">30dp</dimen>
    <dimen name="space12">32dp</dimen>
    <dimen name="space13">35dp</dimen>
    <dimen name="space14">38dp</dimen>
    <dimen name="space15">40dp</dimen>
    <dimen name="space16">42dp</dimen>
    <dimen name="space17">44dp</dimen>
    <dimen name="space18">46dp</dimen>
    <dimen name="space19">48dp</dimen>
    <dimen name="space20">50dp</dimen>
    <dimen name="space21">52dp</dimen>
    <dimen name="space22">102dp</dimen>
    <dimen name="textSize1">8sp</dimen>
    <dimen name="textSize2">10sp</dimen>
    <dimen name="textSize3">12sp</dimen>
    <dimen name="textSize4">14sp</dimen>
    <dimen name="textSize5">16sp</dimen>
    <dimen name="textSize6">18sp</dimen>
    <dimen name="textSize7">20sp</dimen>
    <dimen name="textSize8">22sp</dimen>
    <dimen name="textSize9">24sp</dimen>
    <dimen name="textSize10">26sp</dimen>
    <dimen name="textSize11">28sp</dimen>
    <dimen name="textSize12">30sp</dimen>
    <dimen name="textSize13">32sp</dimen>
    <dimen name="textSize14">34sp</dimen>
    <dimen name="textSize15">36sp</dimen>
    <dimen name="textSize16">38sp</dimen>
    <dimen name="textSize17">40sp</dimen>
    <dimen name="textSize18">42sp</dimen>
    <dimen name="textSize19">44sp</dimen>
    <dimen name="textSize20">46sp</dimen>
    <dimen name="textSize21">48sp</dimen>
    <dimen name="textSize22">50sp</dimen>
    <dimen name="textSize23">52sp</dimen>


    <string name="disclaimer_heading">Disclaimer </string>
    <string name="bottom_text">Content provided by MoRD, hosted and maintained by NIC</string>

    <string name="unable_process">Unable to process your request! Kindly retry in sometime.</string>
    <string name="invalid_location_details">Invalid Longitude and Latitude</string>
    <string name="success">Success</string>
    <string name="NIC1">Hosted and Maintained by National Informatics Centre.</string>
    <string name="exit">Exit App</string>
    <string name="exit_scre">Exit Screen</string>
    <string name="exit_text">Are you sure you to exit the app?</string>
    <string name="exit_screen">Are you sure want to exit from this screen?</string>
</resources>
