<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FAFAFA">

    <rural.rhiss.Util.TextViewCustom
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/otp_head"
        android:textColor="@color/dark_grey"
        android:textSize="15sp" />


    <EditText
        android:id="@+id/editTextOTP"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView9"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:background="@drawable/bg_grey_round"
        android:drawablePadding="5dp"
        android:drawableTint="@color/dark_grey"
        android:hint="@string/enter_otp"
        android:maxLength="20"
        android:maxLines="1"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="#000000"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editTextOTP"
        android:padding="20dp">

        <Button
            android:id="@+id/buttonTimer"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_alignLeft="@+id/checkBox"
            android:layout_alignStart="@+id/checkBox"
            android:layout_below="@+id/checkBox"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.1"
            android:background="@color/orange"
            android:text="@string/reset"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_alignEnd="@+id/checkBox2"
            android:layout_alignRight="@+id/checkBox2"
            android:layout_below="@+id/checkBox2"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.1"
            android:background="@color/app_color"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </LinearLayout>
</RelativeLayout>