<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />


    <rural.rhiss.Util.TextViewCustom
        android:id="@+id/loginText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@color/app_color"
        android:paddingBottom="8dp"
        android:paddingLeft="10dp"
        android:paddingTop="8dp"
        android:text="@string/lgd_code"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_bottom"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <rural.rhiss.Util.TextViewCustom
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_weight="0.1"
            android:text="@string/state_name"
            android:textSize="12sp"
            android:textStyle="bold" />

        <rural.rhiss.Util.TextViewCustom
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.1"
            android:text="2"
            android:textSize="12sp" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_bottom"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <rural.rhiss.Util.TextViewCustom
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_weight="0.1"
            android:text="@string/district_name"
            android:textSize="12sp"
            android:textStyle="bold" />

        <rural.rhiss.Util.TextViewCustom
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.1"
            android:text="2"
            android:textSize="12sp" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_bottom"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <rural.rhiss.Util.TextViewCustom
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_weight="0.1"
            android:text="@string/block_name"
            android:textSize="12sp"
            android:textStyle="bold" />

        <rural.rhiss.Util.TextViewCustom
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.1"
            android:text="2"
            android:textSize="12sp" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_bottom"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <rural.rhiss.Util.TextViewCustom
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_weight="0.1"
            android:text="@string/gp_name"
            android:textSize="12sp"
            android:textStyle="bold" />

        <rural.rhiss.Util.TextViewCustom
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.1"
            android:text="2"
            android:textSize="12sp" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_bottom"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <rural.rhiss.Util.TextViewCustom
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_weight="0.1"
            android:text="@string/village_name"
            android:textSize="12sp"
            android:textStyle="bold" />

        <rural.rhiss.Util.TextViewCustom
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.1"
            android:text="2"
            android:textSize="12sp" />

    </TableRow>

</LinearLayout>
